--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
 
      "build": "npm run build:dev",
          "prebuild:dev": "npm run clean:dist",
-       "build:dev": "webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
+       "build:dev": "node --max-old-space-size=4096 webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
          "prebuild:prod": "npm run clean:dist",
-       "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --colors --display-error-details --display-cached --bail",
+       "build:prod": "node --max-old-space-size=4096 webpack --config config/webpack.prod.js  --progress --profile --colors --display-error-details --display-cached --bail",
 
      "server": "npm run server:dev",
-       "server:dev": "node --max-old-space-size=4096 webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base src/ --port 80",
+       "server:dev": "webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base src/ --port 80",
        "server:dev:hmr": "npm run server:dev -- --hot",
        "server:prod": "http-server dist --cors",
 
