--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
        "build:prod": "node --max-old-space-size=4096 webpack --config config/webpack.prod.js  --progress --profile --colors --display-error-details --display-cached --bail",
 
      "server": "npm run server:dev",
-       "server:dev": "webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base src/ --port 80",
+       "server:dev": "node --max-old-space-size=4096 webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base src/ --port 80",
        "server:dev:hmr": "npm run server:dev -- --hot",
        "server:prod": "http-server dist --cors",
 
